--- a/package.json
+++ b/package.json
@@ -1,11 +1,23 @@
 {
   "name": "timestamp",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/derdrache/timestamp-api.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/derdrache/timestamp-api/issues"
+  },
+  "homepage": "https://github.com/derdrache/timestamp-api#readme",
+  "description": "",
+  "dependencies": {
+    "express": "~4.15.2"
+  }
 }
